Added versions for packages in requirements as langchain just upgraded to version 1.0.3 whereas the chatbots have older version

--- a/agent/requirements.txt
+++ b/agent/requirements.txt
@@ -1,13 +1,13 @@
-langchain
-langchain-community
-langchain-core
-langchain-text-splitters
-google-genai
-langchain-google-genai
-langchain-huggingface
-huggingface-hub
-sentence-transformers
+langchain==0.3.27
+langchain-community==0.3.27
+langchain-core==0.3.74
+langchain-text-splitters==0.3.9
+google-genai==1.31.0
+langchain-google-genai==2.1.9
+langchain-huggingface==0.3.1
+huggingface-hub==0.34.4
+sentence-transformers==5.1.0
 python-dotenv
 django
-pymupdf
+pymupdf==1.26.4
 openai
